# logic-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: ai_formal_fallacies.json
src/: __init__.py  logic_cp_verifier.py  mcp_server.py  run_direction_b_eval.py  z3_verifier.py
tests/: test_edge_cases.py
