[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "logic-audit"
version = "1.0.0"
description = "Logic Audit - formal verification framework for logical fallacy detection using Z3 theorem prover"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.13",
    "mcp>=1.9.0,<2.0",
]

[project.scripts]
logic-audit-mcp = "src.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]
